fix: 🎨 feed alignments

--- a/src/atoms/token-collection/index.module.scss
+++ b/src/atoms/token-collection/index.module.scss
@@ -22,3 +22,8 @@
     padding: 0 60px;
   }
 }
+
+.infinite_scroll {
+  align-self: stretch;
+  width: 100%;
+}
